--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <a href="http://programmingmentor.com">Programming Mentor</a>
     <p>Make sure your pet has plenty of <i><b>fresh water</b></i> during hot weather.</p>
+    <img src="img/grumpy-cat.jpg" alt="Grumpy">
 </body>
 </html>
